--- a/addon/www/index.html
+++ b/addon/www/index.html
@@ -103,7 +103,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					tv_command(this.getAttribute('data-id'), 'power_off');
 				});
 				$("#tvs tbody").append($('<tr>').append(
-					//$('<td>').text(tv.id),
+					$('<td>').text(tv.id),
 					$('<td>').text(tv.name ||''),
 					$('<td>').text(tv.ip ||''),
 					$('<td>').text(tv.mac ||''),
@@ -127,15 +127,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		}
 		
 		function auto_fill_mac_address() {
-			var ip_or_hostname = $('#form-edit-tv').form('get value', 'ip');
-			//var mac = $('#form-edit-tv').form('get value', 'mac');
+			var form = $('#form-edit-tv');
+			var ip_or_hostname = form.form('get value', 'ip');
+			form.addClass('loading');
 			if (ip_or_hostname) {
-				//console.log(ip_or_hostname);
 				rest("POST", "/lookup-mac-address", JSON.stringify(ip_or_hostname), function(data) {
-					console.log("got mac address " + data + " for address " + ip_or_hostname);
+					console.log("got mac address '" + data + "' for address '" + ip_or_hostname + "'");
+					form.removeClass('loading');
 					if (data) {
-						$('#form-edit-tv').form('set value', 'mac', data);
-						$('#form-edit-tv').form('is valid');
+						form.form('set value', 'mac', data);
+						form.form('is valid');
 					}
 				});
 			}
@@ -168,18 +169,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			update_view();
 		}
 		
-		function update_config_tv() {
-			var tv = $('#form-edit-tv').form('get values');
-			var new_tv = false;
-			if (!tv.id) {
-				new_tv = true;
-				tv.id = get_tv_id();
-			}
+		function update_config_tv(tv) {
 			console.log("update_config_tv()");
 			console.log(tv);
 			rest("PUT", "/config/tv/" + tv.id, JSON.stringify(tv), function(data) {
-				console.log(tv);
-				console.log(data);
+				//console.log(tv);
+				//console.log(data);
 				get_config();
 				display_message('info', 'TV successfully updated', 5000);
 				tv_command(tv.id, "show_message", ["HomeMatic successfully connected."]);
@@ -189,21 +184,29 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		function edit_config_tv(id) {
 			config.tvs.forEach(function(tv) {
 				if (tv.id == id) {
-					$('#form-edit-tv').form('reset');
-					$('#form-edit-tv').form('set values', {
+					var form = $('#form-edit-tv');
+					form.form('reset');
+					form.form('set values', {
 						id: tv.id,
 						name: tv.name || '',
 						ip: tv.ip || '',
 						mac: tv.mac || '',
 						key: tv.key || ''
 					});
+					form.find("input[name='id']").parent().css('display', 'block');
+					form.find("input[name='mac']").parent().css('display', 'block');
+					form.find("input[name='key']").parent().css('display', 'block');
 					$('#modal-edit-tv').modal('show');
 				}
 			});
 		}
 		
 		function add_tv() {
-			$('#form-edit-tv').form('reset');
+			var form = $('#form-edit-tv');
+			form.form('reset');
+			form.find("input[name='id']").parent().css('display', 'none');
+			form.find("input[name='mac']").parent().css('display', 'none');
+			form.find("input[name='key']").parent().css('display', 'none');
 			$('#modal-edit-tv').modal('show');
 		}
 		
@@ -215,7 +218,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		}
 		
 		$(document).ready(function() {
-			$('#form-edit-tv').form({
+			var form_config = {
 				on: 'blur',
 				fields: {
 					id: {
@@ -247,11 +250,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					}
 				},
 				onSuccess: function(event, fields) {
-					$('#modal-edit-tv').modal('hide');
-					update_config_tv();
+					$(event.currentTarget).closest("div.modal").modal('hide');
+					var tv = $(event.currentTarget).form('get values');
+					if (!tv.id) {
+						tv.id = get_tv_id();
+					}
+					update_config_tv(tv);
 					event.preventDefault();
 				}
-			});
+			};
+			$('#form-edit-tv').form(form_config);
 		});
 	</script>
 </head>
@@ -264,7 +272,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<table id="tvs" class="ui celled stackable table">
 			<thead>
 				<tr>
-					<!--<th>ID</th>-->
+					<th>ID</th>
 					<th>Name</th>
 					<th>IP-Address</th>
 					<th>MAC-Address</th>
@@ -290,25 +298,26 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<p>Ensure that the TV is turned on and connected to your network.</p>
 			</div>
 			<form id="form-edit-tv" class="ui form">
-				<input name="id" type="hidden">
+				<div class="disabled field">
+					<label>ID</label>
+					<input name="id" placeholder="ID" type="text">
+				</div>
 				<div class="field">
 					<label>Name</label>
 					<input name="name" placeholder="Name" type="text">
 				</div>
 				<div class="field">
 					<label>IP-Address or Hostname</label>
-					<input name="ip" placeholder="IP-Address" type="text" onchange="auto_fill_mac_address();">
+					<input name="ip" placeholder="IP-Address" type="text" onchange='auto_fill_mac_address();'>
 				</div>
 				<div class="field">
 					<label>MAC-Address</label>
 					<input name="mac" placeholder="MAC-Address" type="text">
 				</div>
-				<!--
 				<div class="field">
 					<label>Client-Key</label>
 					<input name="key" placeholder="Client-Key" type="text">
 				</div>
-				-->
 				<div class="ui error message"></div>
 				<div class="ui button" onclick="$('#modal-edit-tv').modal('hide');">Cancel</div>
 				<div class="ui primary submit button">Submit</div>
