--- a/addon/www/index.html
+++ b/addon/www/index.html
@@ -295,7 +295,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		</div>
 		<div class="content">
 			<div class="ui warning message">
-				<p>Ensure that the TV is turned on and connected to your network.</p>
+				<ul>
+					<li>Ensure that the TV is turned on and connected to your network.</li>
+					<li>Accept the incoming connection request on your TV.</li>
+				</ul>
 			</div>
 			<form id="form-edit-tv" class="ui form">
 				<div class="disabled field">
